# package-manager-auto-doc

./: .gitignore  Cargo.toml  README.md
files/: composer.json  package.json  test.csv
src/: composer.rs  helpers.rs  main.rs  npm.rs  types.rs
