[package]
name = "generate-libs-docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
question = "0.2.2"
